<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="onze">11</string>
    <string name="cc">+55</string>
    <string name="phone_number">9 9999 9999</string>
    <string name="digite_o_codigo">Digite o códio</string>
    <string name="validar">Validar</string>
    <string name="validacao">Validação</string>
    <string name="recebeu_sms">Você recebeu um SMS para validação, insira o codigo no campo abaixo.</string>
    <string name="nome">Informe seu Nome</string>
    <string name="informe_email">Informe seu email</string>
    <string name="confirme_seu_email">Confirme seu email</string>
    <string name="senha">Informe um senha</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="cadastre_se">Não tem uma conta? Cadastre-se</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pesquisar">Pesquisar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
