<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/logo_widht"
            android:layout_height="@dimen/logo_hight"
            app:srcCompat="@drawable/usuario" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/informe_email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/edtEmailConfirme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirme_seu_email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cadastrar"
            android:theme="@style/botaoPadrao" />
    </LinearLayout>
</LinearLayout>